--- a/SVM_Image_Classifier_Updated.ipynb
+++ b/SVM_Image_Classifier_Updated.ipynb
@@ -54,14 +54,14 @@
     "print(\"Loading images...\")\n",
     "for idx, class_name in enumerate(class_names):\n",
     "    folder = os.path.join(DATA_DIR, class_name)\n",
-    "    for filename in os.listdir(folder):  # Only process first 50 images\n",
+    "    for filename in os.listdir(folder): \n",
     "        img_path = os.path.join(folder, filename)\n",
     "        img = cv2.imread(img_path)\n",
     "        if img is None:\n",
     "            continue\n",
     "        img = cv2.resize(img, (img_size, img_size))\n",
-    "        img = img / 255.0  # normalize\n",
-    "        X.append(img.flatten())  # flatten to 1D\n",
+    "        img = img / 255.0  \n",
+    "        X.append(img.flatten()) \n",
     "        y.append(idx)\n",
     "\n",
     "X = np.array(X)\n",
