--- a/SVM_Image_Classifier_Updated.ipynb
+++ b/SVM_Image_Classifier_Updated.ipynb
@@ -93,16 +93,19 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     
+     "text": [
+      "🚀 Training new LinearSVC model...\n",
+      "[LibLinear]✅ Model saved to disk.\n"
+     ]
     }
    ],
    "source": [
     "model_path = Path(\"svm_model.joblib\")\n",
     "if model_path.exists():\n",
-    "    print(\"Loading existing LinearSVC model...\")\n",
+    "    print(\"📦 Loading existing LinearSVC model...\")\n",
     "    svm_model = joblib.load(model_path)\n",
     "else:\n",
-    "    print(\" Training new LinearSVC model...\")\n",
+    "    print(\"🚀 Training new LinearSVC model...\")\n",
     "    svm_model = LinearSVC(\n",
     "        C=1.0,\n",
     "        max_iter=50,\n",
@@ -112,7 +115,7 @@
     "    )\n",
     "    svm_model.fit(X_train_scaled, y_train)\n",
     "    joblib.dump(svm_model, model_path)\n",
-    "    print(\" Model saved to disk.\")"
+    "    print(\"✅ Model saved to disk.\")"
    ]
   },
   {
