--- a/SVM_Image_Classifier_Updated.ipynb
+++ b/SVM_Image_Classifier_Updated.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Image Classification using SVM\n",
-    "This notebook loads image data, flattens it, and trains an SVM classifier on the same data as used in the CNN from `app.py`."
+    "This notebook loads image data, flattens it, and trains an SVM classifier."
    ]
   },
   {
